# pymapdl-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  IMPLEMENTATION_PLAN_MAPDL_POOL.md  LICENSE  MAPDL_TESTING_IMPLEMENTATION.md  README.md  SECURITY.md  docker-compose.yml  hackathon.md  index.html  pyproject.toml  robots.txt  sitemap.xml  start_mapdl.sh  versions.json
.ci/: collect_logs.sh  entrypoint.sh  start_mapdl.sh  wait_for_mapdl.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt  start.sh  welcome.rst
.github/: CODEOWNERS  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: approver.yml  ci.yml  label.yml  test.yml
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 105.added.md  106.added.md  107.documentation.md  109.documentation.md  109.maintenance.md  113.added.md  114.added.md  116.added.md  117.added.md  119.added.md  120.fixed.md  121.added.md  122.added.md  123.added.md  124.added.md  126.added.md  128.fixed.md  129.fixed.md  130.added.md  131.added.md  133.dependencies.md  135.documentation.md  138.dependencies.md  139.maintenance.md  141.documentation.md  142.maintenance.md  144.added.md  145.added.md  96.miscellaneous.md
doc/source/: 404.rst  changelog.rst  conf.py  index.rst  links.rst
doc/source/_templates/: layout.html
doc/source/api/: context_objects.rst  index.rst  tools.rst
doc/source/examples/: implementing_a_tool.rst  index.rst  usage_examples.rst
doc/source/examples/work_in_progress/: README.md
doc/source/getting_started/: contribution.rst  develop_pymapdl_mcp.rst  ide_configuration.rst  index.rst  installation.rst  quick_start.rst  write_documentation.rst
doc/source/user_guide/: best_practices.rst  docker.rst  index.rst  overview.rst  tools_and_capabilities.rst
doc/styles/: .gitignore
doc/styles/config/vocabularies/ANSYS/: accept.txt
docker/: Dockerfile  docker-compose.yml  env.example
src/ansys/mapdl/mcp/: __init__.py  __main__.py  context.py  contexts.py  helpers.py  mcp.py  mpc.py  prompts.py  resources.py  server.py  tools.py
src/ansys/mapdl/mcp/python_helper/: startup_code.py
tests/: MAPDL_CODE_GENERATION_TESTING.md  README.md  __init__.py  conftest.py  test_basic.py  test_cli.py  test_connection_tools.py  test_context.py  test_contexts.py  test_error_handling.py  test_helpers.py  test_helpers_persistent_session.py  test_integration.py  test_lifespan.py  test_list_instances.py  test_main.py  test_mapdl_code_generation.py  test_mapdl_code_generation_examples.py  test_mcp_client_integration.py  test_mcp_protocol.py  test_python_session_tools.py  test_resources.py  test_server.py  test_test_utils.py  test_tools.py  test_utils.py
version/: index.html
version/0.2/: changelog.html  index.html  search.html  searchindex.js
version/0.2/_sources/examples/: usage_examples.rst.txt
version/0.2/_sources/user_guide/: docker.rst.txt  overview.rst.txt
version/0.2/_static/: search.json
version/0.2/api/: context_objects.html  tools.html
version/0.2/examples/: index.html  usage_examples.html
version/0.2/getting_started/: contribution.html  develop_pymapdl_mcp.html  ide_configuration.html  index.html  installation.html
version/dev/: 404.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/_sources/: changelog.rst.txt
version/dev/_sources/api/: index.rst.txt
version/dev/_sources/examples/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: context_objects.html  index.html  tools.html
version/dev/examples/: implementing_a_tool.html  index.html  usage_examples.html
version/dev/getting_started/: contribution.html  develop_pymapdl_mcp.html  ide_configuration.html  index.html  installation.html  quick_start.html  write_documentation.html
version/dev/user_guide/: best_practices.html  docker.html  index.html  overview.html  tools_and_capabilities.html
version/stable/: 404.html  genindex.html  index.html  objects.inv
version/stable/_sources/: index.rst.txt
version/stable/_sources/api/: tools.rst.txt
version/stable/_sources/examples/: implementing_a_tool.rst.txt
version/stable/_sources/getting_started/: installation.rst.txt
version/stable/_sources/user_guide/: index.rst.txt
version/stable/api/: index.html
version/stable/examples/: implementing_a_tool.html
version/stable/getting_started/: quick_start.html  write_documentation.html
version/stable/user_guide/: best_practices.html  docker.html  index.html  overview.html  tools_and_capabilities.html
