[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-mapdl-mcp"
version = "0.0.1"
description = "Model Context Protocol (MCP) server for Ansys MAPDL through PyMAPDL"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
maintainers = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
keywords = [
    "ansys",
    "mapdl",
    "pymapdl",
    "mcp",
    "model-context-protocol",
    "ai",
    "assistant",
    "finite-element-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ansys-mapdl-core>=0.68.0",
    "fastmcp>=0.1.0",
    "ansys-common-mcp @ git+https://github.com/ansys-internal/pyansys-common-mcp.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=7.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/ansys/pymapdl-mcp"
Documentation = "https://github.com/ansys/pymapdl-mcp#readme"
Repository = "https://github.com/ansys/pymapdl-mcp"
Issues = "https://github.com/ansys/pymapdl-mcp/issues"

[project.scripts]
ansys-mapdl-mcp = "ansys.mapdl.mcp.__main__:main"

[tool.flit.module]
name = "ansys.mapdl.mcp"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = [
    "^\\.venv/",
    "^venv/",
    "^build/",
    "^dist/",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=ansys.mapdl.mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests that don't require MAPDL",
    "integration: Integration tests that require MAPDL connection",
    "slow: Tests that take a long time to run",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used in tests

[tool.pydocstyle]
convention = "numpy"
add_ignore = ["D100", "D104"]  # Missing docstring in public module/package

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
